# peersonal_assistant

./: .gitignore  Dockerfile.prod  MANIFEST.in  README.md  abstract_architecture.drawio  address_pd_test.py  generator.py  main.py  notes_test.py  pim_classes.drawio  pyproject.toml  r.py  requirements.txt  sorted_folder copy.py  sorted_folder.py  sorty.py
cls/: AddressBook.py  AddressBook_pd.py  NoteBook.py  basa_date.py  generator.py  validators.py
json_schema/: ContactModel.json
modules/: error_handler.py  errors.py  sorted_folder.py  sorter.py
pim/: setup.py
pim/pim/: README.md
pimp/: address_pd_manual_te.py  config.yaml  generator.py  main.py  notes_manual_te.py  requirements.txt
pimp/abcs/: AbcBook.py  DataProviderABC.py
pimp/cls/: AddressBook.py  AddressBook_model.py  AddressBook_moel.py  NoteBook.py  PimpConfig.py  PimpEnvironment.py
pimp/data_providers/: JsonDataProvider.py  JsonStorage.py  PickleDataProvider.py  PickleStorage.py
pimp/interfaces/: AbcBook.py  IStorage.py  StorageABC.py
pimp/models/: ABModels.py
pimp/storages/: FileStorage.py  JsonFileStorage.py  MongoDBStorage.py  PickleFileStorage.py  YamlFileStorage.py  class_builder_scratch.py
pimp/tcss/: contacts.tcss  main.tcss
reference/: notify.py
src/: address_pd_manual_te.py  generator.py  main.py  notes_manual_te.py
tcss/: contacts.tcss  dashboard.tcss  notes.tcss  sorter.tcss
test/: test_Address.py  test_AddressBook.py  test_Birthday.py  test_Phone.py  test_Record.py
tui/: contacts.py  contacts1.py  dashboard.py  notes.py  settings.py  sorter.py  sorter_v1.py
(+20 files in other folders)
