[tool.poetry]
name = "pimp"
version = "0.0.2"
description = "Personal Information Manager Pimped by textual and abstractions"
authors = ["Dmytro-Tarasenko <ug.dotenko@gmail.com>"]
license = "GNU GPL v.3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
